# youtube-analyzer

./: .gitignore  cli.py  config.yaml  core_types.py  db_manager.py  logging_plus.py  main.py  pyproject.toml  test.py  test_demo.json  test_demo.py  test_fork_join_archive.db  usage_guide_core.md  youtube_analyzer.json  youtube_analyzer.py  youtube_archive.db  yt_analyzer_config.py  yt_analyzer_core.py  yt_analyzer_gui.py  yt_audio_downloader.py  yt_llm_processor.py  yt_nextcloud_uploader.py  yt_pipeline_manager.py  yt_rulechain.py  yt_transcription_worker.py  yt_trilium_uploader.py  yt_types.py  yt_url_processor.py  yt_video_downloader.py
config/: __init__.py  secrets.py  settings.py
data/: yt_analyzer_cookies.txt
prompts/: fachinhalt.md  länge_tiefe.md  qualität.md  relevanz.md  transcript_processing.md
services/: __init__.py  analysis.py  download.py  download_service.py  ollama.py  ollama_service.py  whisper.py  whisper_service.py
ui/: __init__.py  colors.py  config_dialog.py  main_window.py
utils/: logging.py
workers/: __init__.py  download_worker.py  whisper_worker.py
